# pg_emigrant

./: .gitignore  LICENSE  README.md  config.yaml.example  pyproject.toml
pg_emigrant/: __init__.py  bootstrap.py  cli.py  config.py  data_copy.py  db.py  ddl_detector.py  monitor.py  replication.py  schema_sync.py  sequence_sync.py  utils.py
pg_emigrant/web/: __init__.py  app.py  jobs.py  services.py
pg_emigrant/web/static/css/: style.css
pg_emigrant/web/static/js/: app.js
pg_emigrant/web/templates/: base.html  config.html  dashboard.html  database.html  jobs.html
replicator/: bootstrap.py  cli.py  config.py  data_copy.py  db.py  ddl_detector.py  monitor.py  replication.py  schema_sync.py  sequence_sync.py
