[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-emigrant"
version = "0.1.0"
description = "PostgreSQL migration and replication orchestrator"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
# Web GUI (pg_emigrant web). Install with: pip install -e ".[web]"
web = ["flask>=3.0"]

[project.scripts]
pg_emigrant = "pg_emigrant.cli:app"

[tool.setuptools.packages.find]
include = ["pg_emigrant*"]

[tool.setuptools.package-data]
"pg_emigrant.web" = ["templates/*.html", "static/css/*.css", "static/js/*.js", "static/img/*"]
