[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-emigrant"
version = "0.1.0"
description = "PostgreSQL migration and replication orchestrator"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",
    # Only used to open a PostgreSQL replication-protocol connection and run
    # CREATE_REPLICATION_SLOT ... EXPORT_SNAPSHOT — asyncpg does not implement
    # the replication protocol (no CopyBoth / START_REPLICATION support), so
    # this is the one place the tool needs a second driver.
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
# Web GUI (pg_emigrant web). Install with: pip install -e ".[web]"
web = ["flask>=3.0"]

[project.scripts]
pg_emigrant = "pg_emigrant.cli:app"

[tool.setuptools.packages.find]
include = ["pg_emigrant*"]

[tool.setuptools.package-data]
"pg_emigrant.web" = ["templates/*.html", "static/css/*.css", "static/js/*.js", "static/img/*"]
